# fragNN

./: .gitignore  CMakeLists.txt  README.md  main.cpp  preprocess.py  run
.cache/clangd/index/: dataloader.cpp.E55B9C05B898984B.idx  dataloader.hpp.842471CAE01F8C52.idx  kernel.cu.BF1F90BF105C3057.idx  main.cpp.535FBC90DA207118.idx  nn.cpp.87E3EB917D36B499.idx
cuda/: activations.cu  backprop.cu  fwd.cu  kernel.cuh  layers.cu  loss.cu  loss.cuh  utils.cu
cuda/headers/: activations.cuh  layers.cuh  loss.cuh  utils.cuh
data/: accord_vocab.txt  note_vocab.txt
src/: dataloader.cpp
src/headers/: dataloader.hpp  nn.hpp
